Fix Rail env for speed_optimisation + H1 text-align on banner

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -10,6 +10,7 @@
     font-weight: bold;
     font-size: 48px;
     color: $brand-color;
+    text-align: center;
     letter-spacing: 5.0px;
     text-shadow: 1px 1px 5px #000;
   }
